# tamako

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  askama.toml  docker-compose.yml  docker.env.example  fly.toml  justfile  pg.env.example  sqlx-data.json
.github/workflows/: _fly.yml  _publish.multi.yml  clippy.yml  fly.yml  publish.yml  publish_image.yml
.sqlx/: query-8d87fbf7c025101b8710fbfc1ff21cc7a1199ba9b21fd50c3ae583d83d827298.json  query-b38c84280e6ec7b77d1d1bc1b82377dcc005598a7183be6476a2ed23b03ec461.json  query-e1f68ab0166b677606dabc5b32a4d8a6f32562857e13567236a43dce3cdb3844.json  query-e2ad61883c661b960770ee510512ba733432f5b410271f79d63ecd09c5f573cc.json
.woodpecker/: clippy.yaml  golint.yaml  publish.yaml
cmd/mochi/: go.mod  go.sum  main.go
cmd/mochi/cmd/: auth.go  root.go  whisper.go
cmd/mochi/tamako/: api.go
cmd/mochi/tui/: tui.go
cmd/mochi/tui/keys/: keys.go
cmd/mochi/tui/minimal/: minimal.go  styles.go
cmd/mochi/tui/styles/: colors.go  delegates.go  styles.go
cmd/tamako/: go.mod  go.sum  main.go
cmd/tamako/api/: api.go
cmd/tamako/cmd/: auth.go  root.go  whisper.go
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.module.scss  App.scss  App.tsx  index.scss  index.tsx
frontend/src/components/: Checkbox.module.scss  Checkbox.scss  Checkbox.tsx
migrations/: 20230327191846_whispers.sql
src/: api.rs  constants.rs  db.rs  filters.rs  handlers.rs  jwt.rs  lib.rs  main.rs  snowflake.rs  template.rs
src/api/: mod.rs  snowflake.rs  webhook.rs
src/auth/: mod.rs
src/db/: mod.rs
src/template/: mod.rs
src/templates/: mod.rs
templates/: 404.html  auth.html  base.html  home.html  macros.html  tamako.html
templates/layout/: base.html
