[package]
name = "tamako"
version = "1.1.0"
description = "Cozy anonymous whispers"
authors = ["fawn <fawn@envs.net>"]
repository = "https://codeberg.org/fawn/tamako"
license = "OSL-3.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }

actix-web = "4.5.1"
actix-files = "0.6.5"
actix-governor = "0.5.0"
actix-logger = "0.4.1"

askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"

sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }

serde = { version = "1.0.197", features = ["derive"] }
twink = { version = "1.1.3", features = ["12-hour", "log"] }
log = "0.4.21"
eyre = { version = "0.6.12" }
dotenvy = "0.15.7"

chrono = "0.4.35"
chrono-tz = "0.8.6"

webhook = "2.1.2"
rs-snowflake = "0.6.0"
once_cell = "1.19.0"

[profile.release]
strip = true
lto = true
codegen-units = 1

[profile.dev.package.backtrace]
opt-level = 3
